ST-1349 Fixing PMD error in LocationService and refactoring to simplify. Suppressing complexity warning in CicCase.